artifacts/argo_hubble_e2e/canary-egress-regression.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: canary-egress-regression
  namespace: kubepulse-e2e
spec:
  endpointSelector:
    matchLabels:
      cohort: canary
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
